<resources>
    <string name="app_name">CAP5510</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search_hint">Search</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_array">
        <item>watchlist</item>
        <item>calendar</item>

    </string-array>

    <string-array name="list_values">
        <item>1</item>
        <item>2</item>

    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="logout">logout</string>
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_header_custom_settings">Custom Settings</string>

    <string name="pref_start_page_type">startpagetype</string>
    <string name="pref_reminder_notifications">remindernotifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_watchlist">Watchlist</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_friend_feed">Friends</string>
    <string name="title_activity_movie_info">Movie Info</string>
    <string name="title_activity_show_info">Show Info</string>
    <string name="title_activity_episode_info">Episode Info</string>
    <string name="title_activity_recommendation">Recommendations</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="settings_title">Set Start Page</string>

    <string name="pref_user_profile">User Profile</string>
    <string name="pref_user_settings">Update Settings</string>

    <string name="time6pm">6PM</string>
    <string name="time7pm">7PM</string>
    <string name="time8pm">8PM</string>
    <string name="time9pm">9PM</string>
    <string name="time10pm">10PM</string>
    <string name="time11pm">11PM</string>
    <string name="time12am">12AM</string>

    <!-- watchlist strings -->
    <string name="watchlistText">On Deck to Watch</string>
    <string name="onDeckTV">TV episodes</string>
    <string name="onDeckMovie">Movies</string>
    <string name="harry_potter_and_the_deathly_hallows_part_one">Harry Potter and the Deathly Hallows Part one</string>
    <string name="starring">Starring</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
